public class SimulacionRCCCF {

    public static void main(String[] args) {
        SimulacionCocina simulacionCocina;
        simulacionCocina = new SimulacionCocina();
        simulacionCocina.ejecutar();
    }
}